# cli_tetris

./: CMakeLists.txt  SDL2_test.cpp  compile_commands.json
.clangd/index/: SDL2_test.cpp.A4C2BABCFDA56A91.idx
src/: compile_commands.json  main.cpp
